--- a/custom_components/ecologi/translations/en.json
+++ b/custom_components/ecologi/translations/en.json
@@ -14,5 +14,14 @@
                 }
             }
         }
+    },
+    "options": {
+        "step": {
+            "init": {
+                "data": {
+                    "scan_interval": "Change scan interval (minutes)"
+                }
+            }
+        }
     }
 }
