fix: resolve use of options

--- a/custom_components/ecologi/translations/en.json
+++ b/custom_components/ecologi/translations/en.json
@@ -9,8 +9,7 @@
         "step": {
             "user": {
                 "data": {
-                    "scan_interval": "Scan interval (minutes)",
-                    "username": "User"
+                    "username": "Username"
                 }
             }
         }
